--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "next": "14.2.25",
     "react": "^18",
     "react-dom": "^18"
