--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "bootstrap": "^5.3.2",
     "next": "14.2.25",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@types/node": "^20",
