--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "next": "14.2.25",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.0.5",
+    "react": "19.0.1",
+    "react-dom": "19.0.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "eslint": "^8",
-    "eslint-config-next": "^14.2.25",
+    "eslint-config-next": "15.0.5",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "husky": "^9.1.6",
