--- a/package.json
+++ b/package.json
@@ -9,29 +9,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
-    "next": "15.0.7",
-    "react": "19.0.3",
-    "react-dom": "19.0.3",
-    "swiper": "^11.2.10"
+    "next": "15.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.5",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
-    "typescript": "^5"
+    "@types/node": "25.0.8",
+    "@types/react": "19.2.8",
+    "typescript": "5.9.3"
   }
 }
