--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,10 @@ dependencies = [
   "python-jsx>=0.4.0",
   "uvicorn>=0.40.0",
 ]
+
+[tool.setuptools.packages.find]
+include = ["website*"]
+namespaces = true
+
+[tool.uv]
+package = true
