Support blog entries.
Signed-off-by: DKL <dkl@zurich.ibm.com>

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
       "use": "@vercel/python"
     },
     {
+      "src": "blog/**",
+      "use": "@vercel/static"
+    },
+    {
       "src": "public/**",
       "use": "@vercel/static"
     }
