--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ dependencies = [
   "fastapi>=0.129.0",
   "python-jsx>=0.4.0",
   "uvicorn>=0.40.0",
+  "markdown>=3.10.2",
+  "pydantic>=2.12.5",
+  "pymdown-extensions>=10.21",
 ]
 
 [tool.setuptools.packages.find]
