Extend blog posts.
Signed-off-by: DKL <dkl@zurich.ibm.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "markdown>=3.10.2",
   "pydantic>=2.12.5",
   "pymdown-extensions>=10.21",
+  "babel>=2.18.0",
 ]
 
 [tool.setuptools.packages.find]
